  * new header filter for Accept* headers (default disabled)
  * setup.py
    - adjust .bat files on Windows to be executable out-of-the-box
    - use "libxml2" as libxml library name on Windows
    - use os.getcwd(), not "."
  * compile fix for Windows in htmlsax.c
  * minor debug output improvements
  * use Pythons internal gettext module, get rid of fintl.py

 -- Bastian Kleineidam <calvin@debian.org>  Thu, 29 Nov 2001 11:29:31 +0100

webcleaner (0.28) unstable; urgency=low

  * fix another flush error when self.attrs is not set
  * use re.sub() in Replacer.py, this is much faster

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 21 Nov 2001 19:45:18 +0100

webcleaner (0.27) unstable; urgency=low

  * wcheaders option window improvements
  * on Debian use init.d script for proxy start/stop/restart in
    webcleanerconf

 -- Bastian Kleineidam <calvin@debian.org>  Wed, 21 Nov 2001 11:00:53 +0100

webcleaner (0.26) unstable; urgency=low

  * fix flushing in proxy
  * updated german .po file

 -- Bastian Kleineidam <calvin@debian.org>  Sat, 17 Nov 2001 14:04:05 +0100

webcleaner (0.25) unstable; urgency=low

  * wcheaders: scrolling fix
  * flush data if server is closed
  * more quoting in .xml files
  * use buffering in the replacer

 -- Bastian Kleineidam <calvin@debian.org>  Fri, 16 Nov 2001 10:07:08 +0100

webcleaner (0.24) unstable; urgency=low

  * htmlsax.c: set default encoding to latin-1, because some pages dont
    set the correct charset
  * new config option: log HTML errors
  * filter rule shortcut icon: match case insensitive
  * new header filter to remove cookies
  * a new gui tool wcheaders watches HTTP headers while surfing

 -- Bastian Kleineidam <calvin@debian.org>  Tue, 13 Nov 2001 00:52:02 +0100

webcleaner (0.23) unstable; urgency=low

  * htmlparser.c: fix segfault in character encoding

 -- Bastian Kleineidam <calvin@debian.org>  Wed,  7 Nov 2001 22:00:54 +0100

webcleaner (0.22) unstable; urgency=low

  * implemented header logging